--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 
         <h3>Some lovely pictures of Samoyed dogs</h3>
         <div class="grid">
-            <img src="/2/samoyed/sam1.jpg" alt="Samoyed dog 1">
-            <img src="/2/samoyed/sam2.jpg" alt="Samoyed dog 2">
-            <img src="/2/samoyed/sam3.jpg" alt="Samoyed dog 3">
-            <img src="/2/samoyed/sam4.jpg" alt="Samoyed dog 4">
+            <img src="./samoyed/sam1.jpg" alt="sam1" class="pic1">
+            <img src="./samoyed/sam2.jpg" alt="sam2" class="pic2">
+            <img src="./samoyed/sam3.jpg" alt="sam3" class="pic3">
+            <img src="./samoyed/sam4.jpg" alt="sam4" class="pic4">
         </div>
 
         <p>If you're looking for a loving, active, and fluffy companion, a Samoyed might be the perfect dog for you! ❤️🐶</p>
